# python-version-check

./: .pre-commit-hooks.yaml  Pipfile  README.md  setup.cfg  version_check_pre_commit_hooks.py
.devcontainer/: devcontainer.json
python-version-check/: check_runtime_txt.py
python_version_check/: check_runtime_txt.py
