[metadata]
name = python_version_check
version = 0.1.0
description = Your package description here
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/python-version-check
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    # Any dependencies for your project can be added here, e.g.
    # requests

[options.entry_points]
console_scripts =
    check_runtime_txt = python_version_check.check_runtime_txt:main
