[metadata]
name = version-check-pre-commit-hooks
version = 0.1.0
description = Pre-commit hooks for version checking and more
author = Ram Vasuthevan
author_email = "" 
url = https://github.com/RamVasuthevan/version-check-pre-commit-hooks
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
py_modules = 
    version_check_pre_commit_hooks

[options.entry_points]
console_scripts =
    python_version_runtime_txt_match_pipfile_lock = version_check_pre_commit_hooks:python_version_runtime_txt_match_pipfile_lock
